--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      * {
+        margin: 0;
+      }
+    </style>
+    <style>
+      .link {
+        text-decoration: none;
+        color: inherit;
+      }
+    </style>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Lora:ital@0;1&family=Varela&family=Varela+Round&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Abel&family=Vollkorn&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 
